# CTicTacToe-UI

./: .justfile  CMakeLists.txt  README.md
include/: board_display.h  button.h  color.h  config.h  global.h  label.h  selector.h
include/game/: game.h  player.h
src/: board_display.c  button.c  color.c  config.c  global.c  label.c  main.c  selector.c
src/game/: game.c  player.c
themes/: Origin_Sand.th
